--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.64.2",
     "classnames": "^2.5.1",
+    "ls": "^0.2.1",
     "motion": "^11.18.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,8 +20,8 @@
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@typescript-eslint/eslint-plugin": "6.0.0",
     "@typescript-eslint/parser": "6.0.0",
     "@vitejs/plugin-react": "4.0.3",
